--- a/index/index.css
+++ b/index/index.css
@@ -4,6 +4,68 @@ body {
 }
 .warp {
 	font-size: 0.24rem;
-	height: 3rem;
+}
+.personal-header {
 	background: #d4602b;
+	position: relative;
+	padding-top: 0.1rem;
+}
+.left {
+	text-align: center;
+	display: inline-block;
+	color: #fff;
+	margin: 0.1rem;
+}
+.left img {
+	width: 0.8rem;
+	height: 0.8rem;
+	border-radius: 0.1rem;
+}
+.left .name {
+	line-height: 0.34rem;
+	font-size: 0.2rem;
+}
+.right {
+	display: inline-block;
+	position: absolute;
+	top: 0.25rem;
+	line-height: 0.34rem;
+	margin-left: 0.1rem;
+	color: #fff;
+}
+
+.list {
+	width: 70%;
+	margin: auto;
+	text-align: center;
+	margin-top: 0.5rem;
+}
+.list li {
+	display: inline-block;
+	margin: auto;
+	font-size: 0.3rem;
+	color: #333;
+	text-align: center;
+	width: 49%;
+}
+
+.list li img {
+	width: 0.8rem;
+	height: 0.8rem;
+	margin-bottom: 0.1rem;
+}
+.footer {
+	width: 90%;
+	background: #d4602b;
+	margin-top: 0.3rem;
+	color: #fff;
+	font-size: 0.14rem;
+	padding: 0.2rem;
+	line-height: 0.34rem;
+	border-radius: 0.1rem;
+}
+.footer .title {
+	display: inline-block;
+	width: 0.7rem;
+	text-align: right;
 }
